--- a/HTML/Resume/index.html
+++ b/HTML/Resume/index.html
@@ -11,9 +11,9 @@
     <header>
         <h2>PARAS VERMA</h2>
         <div class="connect">
-            <a class="profile" href="https://github.com/Paras-Verma-2531"><img width="30px"src="/HTML/Resume/github.png" alt="github profile"></a>
-            <a class="profile" href="https://www.linkedin.com/in/paras-verma-274548237/"><img width="30px"src="/HTML/Resume/linkedin.png" alt="linkedin profile"></a>
-            <a class="profile" href="https://leetcode.com/ParasVerma2531/"><img width="30px"src="/HTML/Resume/leetcode.png" alt="leetcode"></a>
+            <a class="profile" href="https://github.com/Paras-Verma-2531"target="_blank"><img width="30px"src="/HTML/Resume/github.png" alt="github profile"></a>
+            <a class="profile" href="https://www.linkedin.com/in/paras-verma-274548237/"target="_blank"><img width="30px"src="/HTML/Resume/linkedin.png" alt="linkedin profile"></a>
+            <a class="profile" href="https://leetcode.com/ParasVerma2531/"target="_blank"><img width="30px"src="/HTML/Resume/leetcode.png" alt="leetcode"></a>
         </div>
         <hr><hr>
     </header>
@@ -32,7 +32,7 @@
                     <h4>PERCENTAGE: 92%</h4>
                 </li>
                 <li class="items">
-                    <h4>High School</h4>
+                   <h4>High School</h4>
                     <p>St. Mary's School,Gadarpur(2019)</p>
                     <h4>PERCENTAGE: 89%</h4>
                 </li>
