Open Graph Protocol

--- a/HTML/OGP.html
+++ b/HTML/OGP.html
@@ -17,6 +17,6 @@
     <meta name="type" content="specifies the type of content">
     <meta name="title" content="specifies the title of the page">
      -->
-     <a href="https://developers.facebook.com/docs/sharing/webmasters/">Link for the OGP</a>
+     <a href="https://developers.facebook.com/docs/sharing/webmasters/">Link for metadata cheatSheats</a>
 </body>
 </html>
