--- a/JAVASCRIPT/classes_objects/index.html
+++ b/JAVASCRIPT/classes_objects/index.html
@@ -7,6 +7,7 @@
     <title>Blank Page</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="classes.js"></script>
 </body>
 </html>
