--- a/JAVASCRIPT/modules_maps_filter/errors.html
+++ b/JAVASCRIPT/modules_maps_filter/errors.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- <script src="errors.js"></script> -->
-    <script  type="module" src="utility.js"></script>
+    <!-- <script  type="module" src="utility.js"></script> -->
+    <!-- <script src="./higher_order_functions.js"></script> -->
+    <script src="./filters_map.js"></script>
 </body>
 </html>
