--- a/JAVASCRIPT/modules_maps_filter/errors.html
+++ b/JAVASCRIPT/modules_maps_filter/errors.html
@@ -11,5 +11,6 @@
     <!-- <script  type="module" src="utility.js"></script> -->
     <!-- <script src="./higher_order_functions.js"></script> -->
     <script src="./filters_map.js"></script>
+    <!-- <script src="./default_parameter.js"></script> -->
 </body>
 </html>
