--- a/JAVASCRIPT/callbacks_promises_fetchQueries/index.html
+++ b/JAVASCRIPT/callbacks_promises_fetchQueries/index.html
@@ -7,7 +7,8 @@
     <title>Callback_promises_TimeIntervals</title>
 </head>
 <body>
-    <script src="./callback.js"></script>
+    <!-- <script src="./callback.js"></script> -->
+    <script src="./promise.js"></script>
     <!-- <script src="./setTimeIntervals.js"></script> -->
 </body>
 </html> 
