--- a/JAVASCRIPT/callbacks_promises_fetchQueries/index.html
+++ b/JAVASCRIPT/callbacks_promises_fetchQueries/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <script src="./callback.js"></script> -->
-    <!-- <script src="./promise.js"></script> -->
-    <script src="./setTimeIntervals.js"></script>
+    <script src="./promise.js"></script>
+    <!-- <script src="./setTimeIntervals.js"></script> -->
 </body>
 </html> 
