positions_float_display

--- a/CSS/Display_float_position/index.html
+++ b/CSS/Display_float_position/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p class="red-border">this is a paragraph</p>
+    <!-- <p class="red-border">this is a paragraph</p>
     <a href="" class="red-border">this is a link</a>
-    <img src="https://via.placeholder.com/200" class="red-border" alt="placeholder-image">
+    <img src="https://via.placeholder.com/200" class="red-border" alt="placeholder-image"> -->
+    <div class="main">
+        <div class="top"></div>
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
 </body>
 </html>
