--- a/CSS/Grid/MediaQueries/index.html
+++ b/CSS/Grid/MediaQueries/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Queries</title>
+    <title>Navbar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <ul>
+            <li class="navbar-items"><a class="items"href="#">Home</a></li>
+            <li class="navbar-items"><a class="items"href="#">Products</a></li>
+            <li class="navbar-items"><a class="items"href="#">About Us</a></li>
+        </ul>
+    </div>
+    
 </body>
 </html>
