--- a/CSS/Grid/MediaQueries/index.html
+++ b/CSS/Grid/MediaQueries/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/f72b3d1475.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- <div class="toggler"><i class="fa-solid fa-bars fa-xl  toggler-item"></i></div> -->
     <div class="navbar">
         <ul>
             <li class="navbar-items"><a class="items"href="#">Home</a></li>
