--- a/JAVASCRIPT/DOM/revisit.html
+++ b/JAVASCRIPT/DOM/revisit.html
@@ -16,7 +16,7 @@
     {
         width: 500px;
         height: 500px;
-        background-color: #0000007e;
+        background-color: #F1D4E5;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,9 +25,9 @@
     {
         width: 200px;
         height: 70px;
-        background-color: #84f163ab;
-        color: black;
-        border-radius: 35%;
+        background-color:#73BBC9;
+        color: wheat;
+        border-radius: 20px;
         display: flex;
         align-items: center;
        justify-content: center;
@@ -35,12 +35,12 @@
     }
     .box:hover
     {
-         background-color: cadetblue;
+        background-color:#080202;
     }
 </style>
 <body>
     <div class="container">
-        <div class="box" id="box"><p>Hello World</p></div>
+        <!-- <div class="box" id="box"><p>Hello World</p></div> -->
     </div>
     <script src="revisit.js"></script>
 </body>
