--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -17,19 +17,20 @@
             <div class="temp-icon"><i class="fa-solid fa-temperature-three-quarters fa-lg"></i></div>
         </div>
         <div class="input-area">
-            <input type="number" placeholder="Celcius">
+            <input type="number" placeholder="Celcius"id="Celcius">
             <span class="icon">&#8451</span>
         </div>
         <div class="input-area">
-            <input type="number" placeholder="Fehrenhiet">
+            <input type="number" placeholder="Fehrenhiet"id="Fehrenhiet">
             <span class="icon">&#8457</span>
         </div>
         <div class="input-area">
-            <input type="number" placeholder="Kelvin">
+            <input type="number" placeholder="Kelvin"id="Kelvin">
             <span class="icon">&#8490</span>
         </div>
-        <button type="submit">All Clear </button>
+        <button id="button"type="submit">All Clear </button>
     </div>
+    <!-- <script src="./script.js"></script> -->
 </body>
 
 </html>
