button onclick event added

--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -28,9 +28,9 @@
             <input type="number" placeholder="Kelvin"id="Kelvin">
             <span class="icon">&#8490</span>
         </div>
-        <button id="button"type="submit">All Clear </button>
+        <button id="button" onclick="clearValue()">All Clear </button>
     </div>
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
