--- a/temperature-converter/index.html
+++ b/temperature-converter/index.html
@@ -17,7 +17,7 @@
             <div class="temp-icon"><i class="fa-solid fa-temperature-three-quarters fa-lg"></i></div>
         </div>
         <div class="input-area">
-            <input type="number" placeholder="Celcius"id="Celcius">
+            <input type="number" placeholder="Celcius"id="Celcius" onchange="setValue()">
             <span class="icon">&#8451</span>
         </div>
         <div class="input-area">
