--- a/carousel/index.html
+++ b/carousel/index.html
@@ -15,6 +15,8 @@
             <div class="flex-container" id="flex-container"></div>
             <button class="btn left-button"id="left-button"><i class="fa-solid fa-angle-left fa-beat fa-2xl"></i></button>
             <button class="btn right-button"id="right-button"><i class="fa-solid fa-angle-right fa-fade fa-2xl"></i></button>
+            <!-- container for nav -->
+            <div class="carousel-nav" id="carousel-nav"></div>
         </div>
     </div>
     <script src="./script.js"></script>
